--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
 @import url('./reset.css');
 
 body {
-  margin: 0;
+  margin: 20px 0 0 0;
   padding: 0;
   font-family: sans-serif;
+  background: #949;
+}
+
+.instrument {
+  background: #eee;
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .monome {
@@ -39,14 +48,34 @@ body {
 
 input[type="button"] {
   border: none;
-  background: #abf;
+  background: #727;
   color: white;
   font-size: 20px;
-  padding: 5px;
+  padding: 5px 10px;
   border-radius: 5px;
   margin: 10px;
+  display: block;
 }
 
 input[type="button"]:hover {
-  background: #7ad;
+  background: #359;
+}
+
+.controls {
+  background: white;
+  margin-top: 20px;
+  border: 2px solid #555;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.controls .knob {
+  margin: 10px 5px;
+  display: inline-block;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 5px;
+}
+.knob h3 {
+  margin-bottom: 10px;
 }
