--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,9 @@ input[type="button"]:hover {
   margin-bottom: 10px;
 }
 .no-support {
+  margin-top: 50px;
+  background: #555;
   color: #fefefe;
-  padding: 0 20px;
+  padding: 30px 20px;
   text-align: center;
 }
